generated/JuvenaliaParser.py
# Generated from Juvenalia.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JuvenaliaParser ( Parser ):

    grammarFileName = "Juvenalia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'['", "']'", "','", "'('", "')'", 
                     "'{'", "'}'", "'.'", "'()'", "':'", "'float32'", "'float64'", 
                     "'int32'", "'int64'", "'bool'", "'str'", "'write'", 
                     "'read'", "'in'", "'rep'", "'if'", "'func'", "'class'", 
                     "'struct'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'!'", "<INVALID>", "'&&'", 
                     "'||'", "'^^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WRITE", "READ", "IN", "REPEAT", 
                      "IF", "FUNCTION", "CLASS", "STRUCT", "INT", "FLOAT", 
                      "BOOL", "AddOper", "MultOper", "NegOper", "RelOper", 
                      "AndOper", "OrOper", "XorOper", "ID", "STRING", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_arrayAssign = 2
    RULE_expr = 3
    RULE_condXorStm = 4
    RULE_condStmAnd = 5
    RULE_condStmRel = 6
    RULE_addExpr = 7
    RULE_multExpr = 8
    RULE_negFactor = 9
    RULE_factor = 10
    RULE_ifStm = 11
    RULE_blockIf = 12
    RULE_repeatStm = 13
    RULE_repNum = 14
    RULE_blockRepeat = 15
    RULE_function = 16
    RULE_blockFun = 17
    RULE_classDecl = 18
    RULE_blockClass = 19
    RULE_method = 20
    RULE_blockMethod = 21
    RULE_methodType = 22
    RULE_methodName = 23
    RULE_className = 24
    RULE_methodCall = 25
    RULE_classAssign = 26
    RULE_structDecl = 27
    RULE_blockStruct = 28
    RULE_structVarDecl = 29
    RULE_structAssign = 30
    RULE_structFieldAssign = 31
    RULE_structFieldAccess = 32
    RULE_arrayAccess = 33
    RULE_funcCall = 34
    RULE_ident = 35
    RULE_type = 36
    RULE_funType = 37
    RULE_funName = 38
    RULE_structName = 39

    ruleNames =  [ "prog", "stat", "arrayAssign", "expr", "condXorStm", 
                   "condStmAnd", "condStmRel", "addExpr", "multExpr", "negFactor", 
                   "factor", "ifStm", "blockIf", "repeatStm", "repNum", 
                   "blockRepeat", "function", "blockFun", "classDecl", "blockClass", 
                   "method", "blockMethod", "methodType", "methodName", 
                   "className", "methodCall", "classAssign", "structDecl", 
                   "blockStruct", "structVarDecl", "structAssign", "structFieldAssign", 
                   "structFieldAccess", "arrayAccess", "funcCall", "ident", 
                   "type", "funType", "funName", "structName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    WRITE=18
    READ=19
    IN=20
    REPEAT=21
    IF=22
    FUNCTION=23
    CLASS=24
    STRUCT=25
    INT=26
    FLOAT=27
    BOOL=28
    AddOper=29
    MultOper=30
    NegOper=31
    RelOper=32
    AndOper=33
    OrOper=34
    XorOper=35
    ID=36
    STRING=37
    NEWLINE=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JuvenaliaParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuvenaliaParser.StatContext)
            else:
                return self.getTypedRuleContext(JuvenaliaParser.StatContext,i)


        def getRuleIndex(self):
            return JuvenaliaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = JuvenaliaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 208841474048) != 0):
                self.state = 80
                self.stat()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(JuvenaliaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JuvenaliaParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StructDeclarationContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDecl(self):
            return self.getTypedRuleContext(JuvenaliaParser.StructDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)


    class ReadContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(JuvenaliaParser.READ, 0)
        def ID(self):
            return self.getToken(JuvenaliaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)


    class RepeatStatementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def repeatStm(self):
            return self.getTypedRuleContext(JuvenaliaParser.RepeatStmContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeatStatement" ):
                listener.enterRepeatStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeatStatement" ):
                listener.exitRepeatStatement(self)


    class ElementAssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(JuvenaliaParser.ID, 0)
        def INT(self):
            return self.getToken(JuvenaliaParser.INT, 0)
        def expr(self):
            return self.getTypedRuleContext(JuvenaliaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElementAssign" ):
                listener.enterElementAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElementAssign" ):
                listener.exitElementAssign(self)


    class ExprressionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(JuvenaliaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprression" ):
                listener.enterExprression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprression" ):
                listener.exitExprression(self)


    class StructAssignmetContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structAssign(self):
            return self.getTypedRuleContext(JuvenaliaParser.StructAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructAssignmet" ):
                listener.enterStructAssignmet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructAssignmet" ):
                listener.exitStructAssignmet(self)


    class IfStatementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStm(self):
            return self.getTypedRuleContext(JuvenaliaParser.IfStmContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)


    class ClassDeclarationContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def classDecl(self):
            return self.getTypedRuleContext(JuvenaliaParser.ClassDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)


    class ClassAssignmentContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def classAssign(self):
            return self.getTypedRuleContext(JuvenaliaParser.ClassAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassAssignment" ):
                listener.enterClassAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassAssignment" ):
                listener.exitClassAssignment(self)


    class FuncDeclContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function(self):
            return self.getTypedRuleContext(JuvenaliaParser.FunctionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)


    class WriteContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(JuvenaliaParser.WRITE, 0)
        def ID(self):
            return self.getToken(JuvenaliaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(JuvenaliaParser.IdentContext,0)

        def expr(self):
            return self.getTypedRuleContext(JuvenaliaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)


    class ArrAssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(JuvenaliaParser.IdentContext,0)

        def arrayAssign(self):
            return self.getTypedRuleContext(JuvenaliaParser.ArrayAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrAssign" ):
                listener.enterArrAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrAssign" ):
                listener.exitArrAssign(self)


    class StructFieldAssignmentContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JuvenaliaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structFieldAssign(self):
            return self.getTypedRuleContext(JuvenaliaParser.StructFieldAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructFieldAssignment" ):
                listener.enterStructFieldAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructFieldAssignment" ):
                listener.exitStructFieldAssignment(self)



    def stat(self):

        localctx = JuvenaliaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = JuvenaliaParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(JuvenaliaParser.WRITE)
                self.state = 89
                self.match(JuvenaliaParser.ID)
                pass

            elif la_ == 2:
                localctx = JuvenaliaParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(JuvenaliaParser.READ)
                self.state = 91
                self.match(JuvenaliaParser.ID)
                pass

            elif la_ == 3:
                localctx = JuvenaliaParser.ExprressionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.expr()
                pass

            elif la_ == 4:
                localctx = JuvenaliaParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.ident()
                self.state = 94
                self.match(JuvenaliaParser.T__0)
                self.state = 95
                self.expr()
                pass

            elif la_ == 5:
                localctx = JuvenaliaParser.ElementAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 97
                self.match(JuvenaliaParser.ID)
                self.state = 98
                self.match(JuvenaliaParser.T__1)
                self.state = 99
                self.match(JuvenaliaParser.INT)
                self.state = 100
                self.match(JuvenaliaParser.T__2)
                self.state = 101
                self.match(JuvenaliaParser.T__0)
                self.state = 102
                self.expr()
                pass

            elif la_ == 6:
                localctx = JuvenaliaParser.ArrAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 103
                self.ident()
                self.state = 104
                self.match(JuvenaliaParser.T__0)
                self.state = 105
                self.arrayAssign()
                pass

            elif la_ == 7:
                localctx = JuvenaliaParser.RepeatStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 107
                self.repeatStm()
                pass

            elif la_ == 8:
                localctx = JuvenaliaParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 108
                self.ifStm()
                pass

            elif la_ == 9:
                localctx = JuvenaliaParser.FuncDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 109
                self.function()
                pass

            elif la_ == 10:
                localctx = JuvenaliaParser.StructDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 110
                self.structDecl()
                pass

            elif la_ == 11:
                localctx = JuvenaliaParser.StructFieldAssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 111
                self.structFieldAssign()
                pass

            elif la_ == 12:
                localctx = JuvenaliaParser.StructAssignmetContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 112
                self.structAssign()
                pass

            elif la_ == 13:
                localctx = JuvenaliaParser.ClassDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 113
                self.classDecl()
                pass

            elif la_ == 14:
                localctx = JuvenaliaParser.ClassAssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 114
                self.classAssign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuvenaliaParser.FactorContext)
            else:
                return self.getTypedRuleContext(JuvenaliaParser.FactorContext,i)


        def getRuleIndex(self):
            return JuvenaliaParser.RULE_arrayAssign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayAssign" ):
                listener.enterArrayAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayAssign" ):
                listener.exitArrayAssign(self)




    def arrayAssign(self):

        localctx = JuvenaliaParser.ArrayAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arrayAssign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(JuvenaliaParser.T__1)
            self.state = 118
            self.factor()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 119
                self.match(JuvenaliaParser.T__3)
                self.state = 120
                self.factor()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(JuvenaliaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condXorStm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuvenaliaParser.CondXorStmContext)
            else:
                return self.getTypedRuleContext(JuvenaliaParser.CondXorStmContext,i)


        def OrOper(self):
            return self.getToken(JuvenaliaParser.OrOper, 0)

        def getRuleIndex(self):
            return JuvenaliaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = JuvenaliaParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.condXorStm()
                self.state = 129
                self.match(JuvenaliaParser.OrOper)
                self.state = 130
                self.condXorStm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.condXorStm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondXorStmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condStmAnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuvenaliaParser.CondStmAndContext)
            else:
                return self.getTypedRuleContext(JuvenaliaParser.CondStmAndContext,i)


        def XorOper(self):
            return self.getToken(JuvenaliaParser.XorOper, 0)

        def getRuleIndex(self):
            return JuvenaliaParser.RULE_condXorStm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondXorStm" ):
                listener.enterCondXorStm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondXorStm" ):
                listener.exitCondXorStm(self)




    def condXorStm(self):

        localctx = JuvenaliaParser.CondXorStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condXorStm)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.condStmAnd()
                self.state = 136
                self.match(JuvenaliaParser.XorOper)
                self.state = 137
                self.condStmAnd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.condStmAnd()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondStmAndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condStmRel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuvenaliaParser.CondStmRelContext)
            else:
                return self.getTypedRuleContext(JuvenaliaParser.CondStmRelContext,i)


        def AndOper(self):
            return self.getToken(JuvenaliaParser.AndOper, 0)

        def getRuleIndex(self):
            return JuvenaliaParser.RULE_condStmAnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondStmAnd" ):
                listener.enterCondStmAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondStmAnd" ):
                listener.exitCondStmAnd(self)




    def condStmAnd(self):

        localctx = JuvenaliaParser.CondStmAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condStmAnd)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.condStmRel()
                self.state = 143
                self.match(JuvenaliaParser.AndOper)
                self.state = 144
                self.condStmRel()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.condStmRel()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondStmRelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuvenaliaParser.AddExprContext)
            else:
                return self.getTypedRuleContext(JuvenaliaParser.AddExprContext,i)


        def RelOper(self):
            return self.getToken(JuvenaliaParser.RelOper, 0)

        def getRuleIndex(self):
            return JuvenaliaParser.RULE_condStmRel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondStmRel" ):
                listener.enterCondStmRel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondStmRel" ):
                listener.exitCondStmRel(self)




    def condStmRel(self):

        localctx = JuvenaliaParser.CondStmRelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condStmRel)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.addExpr()
                self.state = 150
                self.match(JuvenaliaParser.RelOper)
                self.state = 151
                self.addExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.addExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuvenaliaParser.MultExprContext)
            else:
                return self.getTypedRuleContext(JuvenaliaParser.MultExprContext,i)


        def AddOper(self):
            return self.getToken(JuvenaliaParser.AddOper, 0)

        def getRuleIndex(self):
            return JuvenaliaParser.RULE_addExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddExpr" ):
                listener.enterAddExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddExpr" ):
                listener.exitAddExpr(self)




    def addExpr(self):

        localctx = JuvenaliaParser.AddExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_addExpr)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.multExpr()
                self.state = 157
                self.match(JuvenaliaParser.AddOper)
                self.state = 158
                self.multExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.multExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def negFactor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuvenaliaParser.NegFactorContext)
            else:
                return self.getTypedRuleContext(JuvenaliaParser.NegFactorContext,i)


        def MultOper(self):
            return self.getToken(JuvenaliaParser.MultOper, 0)

        def getRuleIndex(self):
            return JuvenaliaParser.RULE_multExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultExpr" ):
                listener.enterMultExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultExpr" ):
                listener.exitMultExpr(self)




    def multExpr(self):

        localctx = JuvenaliaParser.MultExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_multExpr)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.negFactor()
                self.state = 164
                self.match(JuvenaliaParser.MultOper)
                self.state = 165
                self.negFactor()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.negFactor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NegFactorContext(ParserRuleContext):
        __slots__ = 'parser'
